<resources>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-6631995366825654/5713505078</string>
    <string name="app_name">Go+ Companion</string>
    <string name="action_settings">Settings</string>
    <string name="connecting_failed">Connection timed out</string>
    <string name="service_running">Service is running</string>
    <string name="service_not_running">Service is not running</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="connection_lost">GO Plus connection lost</string>
    <string name="tap_to_open">Tap to open Pokemon GO</string>
    <string name="notification_title">GO Plus is being boosted</string>
    <string name="notification_battery_level">Current battery level is %1$d%%</string>
    <string name="notification_service_title">Service running</string>
    <string name="notification_service_content">To start connect your GO Plus</string>
    <string name="connecting">Connecting to the Go Plus…</string>
    <string name="help">This app automatically sets the Bluetooth connection priority to high for your Pokemon GO Plus, which should result in much better reaction times. You also get notified when the GO Plus disconnects and can check the power level. \n\n Beware: This might increase the power usage</string>
    <string name="title_activity_settings">Settings</string>
    <string name="battery_dialog_message">To prevent the service from stopping, please disable battery optimizations for this app</string>
    <string name="battery_dialog_positive">Go to settings</string>
    <string name="battery_dialog_negative">Cancel</string>
    <string name="battery_dialog_neutral">Don\'t remind me again</string>
    <string name="battery_dialog_error">There was an error while opening the settings, please whitelist the app manually</string>

    <!-- Strings related to Settings -->

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_group_connection_lost">Connection lost notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_vibrate_lengths">Vibration lengths in ms</string>
    <string name="pref_title_vibrate_counts">Vibration counts</string>
</resources>
