<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/pref_group_connection_lost">

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />

    <!--- <EditTextPreference
        android:key="notifications_new_message_vibrate_count"
        android:title="@string/pref_title_vibrate_counts"
        android:defaultValue="2"
        android:dependency="notifications_new_message_vibrate"
        android:numeric="integer"
        android:maxLength="2" />-->

    <EditTextPreference
        android:key="notifications_new_message_vibrate_length"
        android:title="@string/pref_title_vibrate_lengths"
        android:defaultValue="200"
        android:dependency="notifications_new_message_vibrate"
        android:numeric="integer"
        android:maxLength="4" />

    <!---<ListPreference
        android:dependency="notifications_new_message_vibrate"
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="notifications_new_message_vibrate_count"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_vibrate_count" />
-->

    </PreferenceCategory>

</PreferenceScreen>
